[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Wall.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 108 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 108 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 1, 100, -1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Wall" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -188.0
margin_right = 256.0
margin_bottom = 485.0
rect_pivot_offset = Vector2( 226, 197 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.952941, 0.341176, 0.341176, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 128, 108 )
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 128, 108 )
shape = SubResource( 2 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 1.362
one_shot = true
autostart = true

[node name="SpeedTween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 257, 107 )
process_material = SubResource( 3 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 128.5, 148.5 )
scale = Vector2( 12.75, 33.65 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
